정현우 - 상단 바 유저 프로필 정보 추가, favoriteService 팔로우 카운팅 + 팔로우 여부 확인 기능 추가, userProfile의 follow한 컨텐츠 보이게 수정

--- a/src/main/resources/templates/user/userProfile.html
+++ b/src/main/resources/templates/user/userProfile.html
@@ -77,7 +77,7 @@
         <section class="user-gallery-section mt-4" th:unless="${images.size() == 0}">
   <h3 class="gallery-title mb-3" style="color: #fff; font-size: 1.2rem;">좋아하는 영화/게임들</h3>
   <div class="user-gallery-grid">
-    <img th:each="image, iterStat : ${images}" th:if="${iterStat.index < 4}" th:src="@{${image.path}}" alt="gallery-img" class="gallery-img" />
+    <img th:each="image, iterStat : ${images}" th:if="${iterStat.index < 4}" th:src="@{'/' + ${image.path}}" alt="gallery-img" class="gallery-img" />
 
     
   </div>
