--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<header class="header" th:fragment="header">
+  <header class="header" th:fragment="header">
     <div class="container">
       <div class="row">
         <div class="col-lg-2">
@@ -35,15 +35,36 @@
           </div>
         </div>
         <div class="col-lg-2">
-          <div class="header__right">
-            <a href="#" class="search-switch"><span class="icon_search"></span></a>
-            <a th:href="@{/user/login}"><span class="icon_profile"></span></a>
+          <div class="header__right d-flex align-items-center gap-3">
+            <a href="#" class="search-switch me-2">
+              <span class="icon_search"></span>
+            </a>
+
+            <!-- 로그인: 프로필 이미지 -->
+            <a
+              th:if="${profileImageUrl != null}"
+              th:href="@{/user/userProfile}"
+              class="d-flex align-items-center text-decoration-none"
+            >
+              <img
+                th:src="'/images/view/' + ${profileImageUrl}"
+                alt="프로필"
+                class="rounded-circle border border-primary shadow-sm"
+                style="width: 40px; height: 40px; object-fit: cover; background: #eee"
+              />
+            </a>
+            <!-- 비로그인: 기본 아이콘 -->
+            <a
+              th:if="${profileImageUrl == null}"
+              th:href="@{/user/login}"
+              class="d-flex align-items-center text-decoration-none"
+            >
+              <span class="icon_profile fs-3"></span>
+            </a>
           </div>
         </div>
       </div>
       <div id="mobile-menu-wrap"></div>
-
     </div>
-</header>
-
+  </header>
 </html>
