--- a/src/main/resources/templates/ott_contents/movieList.html
+++ b/src/main/resources/templates/ott_contents/movieList.html
@@ -51,7 +51,7 @@
                   <!-- 팔로우수  -->
                   <div class="comment_movie">11</div>
                   <!-- 댓글갯수  -->
-                  <div class="view_movie" th:text="'Re: ' + 개"></div>
+                  <div class="view_movie" th:text="'Re: ' + ${movie.replycnt} + 개"></div>
                 </a>
                 <!-- <div class="ep">18 / 18</div> -->
               </div>
