--- a/src/main/resources/templates/ott_contents/gameList.html
+++ b/src/main/resources/templates/ott_contents/gameList.html
@@ -63,7 +63,7 @@
                     <!-- 팔로우수  -->
                     <div class="comment_game">11</div>
                     <!-- 댓글갯수  -->
-                    <div class="view_game" th:text="'Re: ' + 개"></div>
+                    <div class="view_game" th:text="'Re: ' + ${game.replycnt} + 개"></div>
                   </a>
                   <!-- 할인율이 0이 아니면 '할인중' 표시 -->
                   <div class="discount-badge" th:if="${game.discountRate != 0}">SALE !!!</div>
