--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <th:block layout:fragment="title"></th:block>
 
     <meta name="description" content="Anime Template" />
     <meta name="keywords" content="Anime, unica, creative, html" />
@@ -12,7 +12,6 @@
 
     <!-- BootStrap -->
 
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
@@ -20,26 +19,25 @@
     ></script>
 
     <!-- Google Font -->
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
-    />
+    /> -->
 
     <!-- Css Styles -->
 
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css" />
 
     <!-- <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" /> -->
-    <!-- <link rel="stylesheet" th:href="@{/css/elegant-icons.css}" type="text/css" /> -->
+
     <link rel="stylesheet" th:href="@{/css/plyr.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/nice-select.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" />
-    <link rel="stylesheet" th:href="@{/css/elegant-icons.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/slicknav.min.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/reply.css}" type="text/css" />
