--- a/src/main/resources/templates/user/modifyUserProfile.html
+++ b/src/main/resources/templates/user/modifyUserProfile.html
@@ -18,24 +18,6 @@
             />
           </div>
           <!-- 사진 변경, 회원탈퇴 버튼 -->
-          <form th:action="@{/user/uploadProfile}" method="post" enctype="multipart/form-data" class="w-100">
-            <input type="hidden" name="id" th:value="${userProfileDTO.id}" />
-            <button
-              type="button"
-              class="profile-btn profile-btn-secondary"
-              onclick="document.getElementById('profileImage').click();"
-            >
-              사진 변경
-              <input
-                type="file"
-                id="profileImage"
-                name="file"
-                accept="image/*"
-                style="display: none; position: absolute; left: 0; top: 0; width: 100%; height: 100%; opacity: 0"
-                onchange="this.form.submit()"
-              />
-            </button>
-          </form>
           <form th:action="@{/user/delete(id=${userProfileDTO.id})}" method="post" class="w-100">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
             <button type="submit" class="profile-btn profile-btn-danger">회원탈퇴</button>
@@ -54,6 +36,15 @@
                 <div class="user-info-item mb-3">
                   <label for="name" class="user-info-label">이름</label>
                   <span class="form-control user-info-value">[[*{name}]]</span>
+                      <input
+                    type="hidden"
+                    class="form-control user-info-value"
+                    id="name"
+                    name="name"
+                    maxlength="20"
+                    autocomplete="off"
+                    th:value="*{name}"
+                  />
                 </div>
                 <div class="user-info-item mb-3">
                   <label for="nickname" class="user-info-label">닉네임</label>
