--- a/src/main/resources/templates/ott_contents/movieInfo.html
+++ b/src/main/resources/templates/ott_contents/movieInfo.html
@@ -234,7 +234,16 @@
             <!-- 댓글 시작 -->
             <div th:each="reply : ${replies}" class="anime__review__item">
               <div class="anime__review__item__pic" th:classappend="${reply.ref != null} ? 're-reply'">
-                <img src="img/anime/review-1.jpg" alt="" />
+                <!-- 로그인: 프로필 이미지 프로필 이미지가 없을 경우, 기본 이미지출력 -->
+            
+              <img
+                th:src="${reply.thumbnailPath == null} ? '/images/sample.jpg' :'/images/view/' + ${reply.thumbnailPath}"
+                alt="프로필"
+                class="rounded-circle border border-primary shadow-sm"
+                style="width: 40px; height: 40px; object-fit: cover; background: #eee"
+              />
+       
+
               </div>
               <div
                 class="anime__review__item__text reply"
@@ -284,6 +293,7 @@
 
       <script>
         const mid = "[[${movieInfo.mid}]]";
+        const csrf = "[[${_csrf.token}]]";
       </script>
       <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
       <script th:src="@{/js/reply.js}"></script>
