--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,15 +3,11 @@
   <header class="header" th:fragment="header">
     <div class="container">
       <div class="row">
-        <div class="col-lg-2">
-          <div class="header__logo">
-            <!-- <a href="./index.html">
-              <img src="img/logo.png" alt="" />
-            </a> -->
-          </div>
+        <div>
+          <div class="header__logo"></div>
         </div>
 
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-sm-4">
           <div class="header__nav">
             <nav class="header__menu mobile-menu">
               <ul>
@@ -19,14 +15,6 @@
                 <li>
                   <!-- <a th:href="@{/api/movies/list}">Movie List<span class="arrow_carrot-down"></span></a> -->
                   <a th:href="@{/api/movies/list}">Movie List</a>
-                  <!-- <ul class="dropdown">
-                    <li><a href="./categories.html">Categories</a></li>
-                    <li><a href="./anime-details.html">Anime Details</a></li>
-                    <li><a href="./anime-watching.html">Anime Watching</a></li>
-                    <li><a href="./blog-details.html">Blog Details</a></li>
-                    <li><a href="./signup.html">Sign Up</a></li>
-                    <li><a href="./login.html">Login</a></li>
-                  </ul> -->
                 </li>
                 <li><a th:href="@{/api/games/list}">Game List</a></li>
                 <!-- <li><a href="#">Webtoon List</a></li> -->
@@ -35,6 +23,22 @@
           </div>
         </div>
         <div class="col-lg-2">
+          <div class="btn__all">
+            <div class="primary-btn">
+              <form action="/api/movies/list" method="get" class="search-box">
+                <select name="content" id="content" onchange="updateCityOptions">
+                  <option value="m">영화</option>
+                  <option value="g">게임</option>
+                </select>
+                <select name="type" id="type">
+                  <option value="">선택</option>
+                </select>
+                <input type="text" name="keyword" id="search" />
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-1 col-md-2">
           <div class="header__right d-flex align-items-center gap-3">
             <!-- 로그아웃 버튼 (로그인 상태에서만 보임) -->
             <form
