--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -54,6 +54,38 @@
     <!-- 여기에 스크립트 삽입 -->
     <script th:src="@{/js/menubar.js}"></script>
 
+    <script>
+      const cityOptions = {
+        m: [
+          { code: "t", name: "제목" },
+          { code: "d", name: "감독" },
+          { code: "a", name: "배우" },
+        ],
+        g: [
+          { code: "t", name: "제목" },
+          { code: "d", name: "개발사" },
+          { code: "p", name: "배급사" },
+        ],
+      };
+
+      function updateCityOptions() {
+        const country = document.getElementById("content").value;
+        const typeSelect = document.getElementById("type");
+
+        // 기존 옵션 초기화
+        typeSelect.innerHTML = "<option value=''>선택</option>";
+
+        // 나라에 해당하는 도시 목록 추가
+        if (country && cityOptions[country]) {
+          cityOptions[country].forEach((city) => {
+            const option = document.createElement("option");
+            option.value = city.code;
+            option.textContent = city.name;
+            typeSelect.appendChild(option);
+          });
+        }
+      }
+    </script>
     <th:block layout:fragment="script"></th:block>
   </body>
 </html>
