content 추가, reply 페이지 분리 중

--- a/src/main/resources/static/css/reply.css
+++ b/src/main/resources/static/css/reply.css
@@ -1,3 +1,8 @@
-.re-reply {
-  margin-left: 25px;
+.re-reply-tag {
+  float: left;
+  padding: 10px 5px;
+  margin: 0px 15px;
+  border: 2px solid gray;
+  border-top: 0;
+  border-right: 0;
 }
