--- a/src/main/resources/templates/fragments/reply.html
+++ b/src/main/resources/templates/fragments/reply.html
@@ -1,21 +1,93 @@
 <!DOCTYPE html>
 <html>
-  <div class="reply" th:fragment="reply">
+  <div class="col-lg-6 mx-auto" th:fragment="reply">
+    <div class="anime__details__review">
+      <div class="section-title">
+        <h5 id="replyCnt" th:text="'댓글 '+${replies.size} + 개"></h5>
+      </div>
+      <!-- 댓글 시작 -->
+      <div th:each="reply : ${replies}" class="anime__review__item">
+        <div class="re-reply-tag" th:if="${reply.ref != null}"></div>
+        <div class="anime__review__item__pic">
+          <!-- 로그인: 프로필 이미지 프로필 이미지가 없을 경우, 기본 이미지출력 -->
+          <img
+            th:src="${reply.thumbnailPath == null} ? '/images/sample.jpg' :'/images/view/' + ${reply.thumbnailPath}"
+            alt="프로필"
+            class="rounded-circle border border-primary shadow-sm"
+            style="width: 40px; height: 40px; object-fit: cover; background: #eee"
+          />
+        </div>
+        <div
+          class="anime__review__item__text reply"
+          th:data-rno="${reply.rno}"
+          th:data-replyer="${reply.replyerNickname}"
+          th:data-replyerNickname="${reply.replyer}"
+          th:data-text="${reply.text}"
+          th:data-mid="${reply.id}"
+          th:data-mention="${reply.mention}"
+          th:data-ref="${reply.ref}"
+        >
+          <span class="replyer text-light" th:text="${reply.replyer}"></span>
+          <span class="text-secondary" th:if="${reply.mention}" th:text="' - '+${reply.mention}+에게"></span>
+          <span class="text-secondary" th:text="${reply.createdDate}"> 작성자 - 1 Hour ago</span>
+          <button
+            type="button"
+            class="delete-btn btn btn-secondary btn-sm"
+            th:if="${#authentication.name == reply.replyer}"
+            th:data-rno="${reply.rno}"
+          >
+            x
+          </button>
+          <button
+            type="button"
+            class="update-btn btn btn-secondary btn-sm"
+            th:if="${#authentication.name == reply.replyer}"
+            th:data-rno="${reply.rno}"
+          >
+            수정
+          </button>
+          <button
+            type="button"
+            class="mention-btn btn btn-secondary btn-sm"
+            th:if="${#authentication.name != 'anonymousUser'}"
+            th:data-rno="${reply.rno}"
+          >
+            대댓글
+          </button>
+          <p th:text="${reply.text}">댓글 텍스트</p>
+        </div>
+      </div>
+      <!-- 댓글 리스트 끝-->
+    </div>
+
+    <!-- 댓글 작성 폼 -->
     <div class="anime__details__form">
       <div class="section-title">
         <h5>댓글 작성</h5>
       </div>
-      <a class="mention text-light"></a>
+      <span class="mention text-light"></span>
       <form id="replyForm" method="post">
-        <input type="hidden" name="id" th:value="${content.id}" />
+        <input type="hidden" name="id" th:value="${content.mid}" />
         <input type="hidden" name="rno" />
         <input type="hidden" name="replyer" th:value="${#authentication.name}" />
         <input type="hidden" name="mention" />
         <input type="hidden" name="ref" />
         <textarea name="text" placeholder="Your Comment"></textarea>
-        <button class="btn btn-insert" type="submit" style="font-size: medium">등록</button>
-        <button class="btn btn-cancel" type="button" style="font-size: medium">취소</button>
+        <div th:if="${#authentication.name != 'anonymousUser'}">
+          <button class="btn btn-insert" type="submit" style="font-size: medium">등록</button>
+          <button class="btn btn-cancel" type="button" style="font-size: medium">취소</button>
+        </div>
+        <div th:if="${#authentication.name == 'anonymousUser'}">
+          <button>로그인</button>
+        </div>
       </form>
     </div>
+    <!-- 댓글 작성 폼 끝 -->
+    <script th:src="@{/js/reply.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+      const id = "[[${content.mid}]]";
+      const csrf = "[[${_csrf.token}]]";
+    </script>
   </div>
 </html>
