--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
             </div>
             <br /><br /><br /><br /><br /><br />
             <div class="center-line"></div>
-            <!-- <div class="popular__product">
+            <div class="popular__product">
             <div class="row">
               <div class="col-lg-8 col-md-8 col-sm-8">
                 <div class="section-title" >
@@ -62,15 +62,6 @@
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="btn__all">
                   <div class="primary-btn">
-                    <form action="/api/games/list" method="get" class="search-box">
-                    <select name="type" id="type">
-                      <option value="t">제목</option>
-                       <option value="g">장르</option> 
-                      <option value="d">개발사</option>
-                      <option value="p">배급사</option>
-                    </select>
-                    <input type="text" name="keyword" id="search">
-                  </form>
                   </div>
                 </div>
               </div>
@@ -105,7 +96,7 @@
             </div>
           </div>
         </div>
-        -->
+       
       </div>
     </section>
     <th:block layout:fragment="script">
