--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -43,6 +43,7 @@
     <link rel="stylesheet" th:href="@{/css/reply.css}" type="text/css" />
 
     <th:block layout:fragment="css"></th:block>
+    <script th:src="@{/js/search.js}"></script>
   </head>
   <body>
     <div th:replace="./fragments/header::header"></div>
@@ -53,39 +54,6 @@
     </div>
     <!-- 여기에 스크립트 삽입 -->
     <script th:src="@{/js/menubar.js}"></script>
-
-    <script>
-      const cityOptions = {
-        m: [
-          { code: "t", name: "제목" },
-          { code: "d", name: "감독" },
-          { code: "a", name: "배우" },
-        ],
-        g: [
-          { code: "t", name: "제목" },
-          { code: "d", name: "개발사" },
-          { code: "p", name: "배급사" },
-        ],
-      };
-
-      function updateCityOptions() {
-        const country = document.getElementById("content").value;
-        const typeSelect = document.getElementById("type");
-
-        // 기존 옵션 초기화
-        typeSelect.innerHTML = "<option value=''>선택</option>";
-
-        // 나라에 해당하는 도시 목록 추가
-        if (country && cityOptions[country]) {
-          cityOptions[country].forEach((city) => {
-            const option = document.createElement("option");
-            option.value = city.code;
-            option.textContent = city.name;
-            typeSelect.appendChild(option);
-          });
-        }
-      }
-    </script>
-    <th:block layout:fragment="script"></th:block>
+    <th:block layout:fragment="script"> </th:block>
   </body>
 </html>
