--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,7 +35,8 @@
                   <option value="d">감독</option>
                   <option value="a">배우들</option>
                 </select>
-                <input type="text" name="keyword" id="search" />
+                <input type="text" name="keyword" id="search" placeholder="검색어" />
+                <input type="submit" value="검색" />
               </form>
             </div>
           </div>
