--- a/src/main/resources/templates/ott_contents/movieInfo.html
+++ b/src/main/resources/templates/ott_contents/movieInfo.html
@@ -155,15 +155,15 @@
         <div
           class="anime__review__item__text reply"
           th:data-rno="${reply.rno}"
-          th:data-replyer="${reply.replyerNickname}"
-          th:data-replyerNickname="${reply.replyer}"
+          th:data-replyer="${reply.replyer}"
+          th:data-replyerNickname="${reply.replyerNickname}"
           th:data-text="${reply.text}"
           th:data-mid="${reply.id}"
           th:data-mention="${reply.mention}"
           th:data-ref="${reply.ref}"
           th:data-rate="${reply.rate}"
         >
-          <span class="replyer text-light" th:text="${reply.replyer}"></span>
+          <span class="replyer text-light" th:text="${reply.replyerNickname}"></span>
           <span class="text-secondary" th:if="${reply.mention}" th:text="' - '+${reply.mention}+에게"></span>
           <span class="text-secondary" th:text="' - ' + ${reply.createdDate}"> 작성자 - 1 Hour ago</span>
           <button
